# Ganbei

./: CMakeLists.txt  Ganbei_act.py  Ganbei_vis.py  README.md  alia_act.py  alia_txt.py  azure_reco.py  mpi_arm.py  mpi_arm_cal.py  mpi_base.py  mpi_buttons.py  mpi_imu.py  mpi_imu_cal.py  mpi_shell.py  servo_test.py
Hiwonder/: Board_25.py
KB0/: Introspect.ops  Introspect.sgm  Manipulate.ops  Manipulate.rules  SceneVis.ops  SceneVis.sgm  TalkFcn.ops
KB2/: awake.ops  baseline.lst  graphizer.ops  graphizer.rules  people.ops  scan.ops  somatic.ops
calib/: mpi_calib.yaml
config/: Ganbei_vals.ini  Herbie_cam.cal  Herbie_face.yaml  Herbie_servo.yaml  Herbie_voice.yaml  Honey_face.yaml  azure_reco.yaml  imu_calib.yaml  misheard.map
deb12_files/home_pi/: .profile
deb12_files/usr_local_bin/: grab_cal  wifi
doc/: calibration.md  hardware.md  operation.md  parts_list.md  software.md
docs/: README.md  calibration.md  hardware.md  operation.md  parts_list.md  software.md
language/: alia_NP.sgm  alia_VP.sgm  alia_lex.sgm  alia_top.sgm  vocabulary.sgm
mpi_cam/: CMakeLists.txt  mpi_cam.py
mpi_face/: mpi_face.py
mpi_face/include/: jhcFaceApp.h
mpi_face/src/: jhcFaceApp.cpp  mpi_face.cpp
mpi_spout/: CMakeLists.txt  mpi_spout.py
mpi_spout/include/: jhcFestTTS.h  jhcMpiSpout.h
mpi_spout/src/: jhcFestTTS.cpp  jhcMpiSpout.cpp  mpi_spout.cpp
project/: Ganbei_vis.py
project/KB0/: Ballistic.ops  Ballistic.sgm  Manipulate.sgm  SceneVis.rules  Social.ops
project/KB2/: acknowledge.ops  acknowledge.sgm  test.facts  volition.lst  whinge.ops
project/config/: Ganbei_vals.ini  Herbie_cam.cal  Herbie_servo.yaml  Honey_voice.yaml
project/language/: alia_VP.sgm  alia_top.sgm
project/mpi_spout/: CMakeLists.txt
project/scripts/: mpi_arm.py  (+5 more)
scripts/: alia_vis.py  azure_reco.py  mpi_arm.py  mpi_arm_cal.py  mpi_base.py  mpi_battery.py  mpi_buttons.py  mpi_cam.py  mpi_hiwonder.py  mpi_imu.py  mpi_shell.py  mpi_spout.py  servo_test.py
(+26 files in other folders)
